--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "passport": "0.6.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2".
+    "body-parser": "^1.20.3"
   }
 }
