--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "body-parser",
+  "version": "1.20.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,6 @@
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "passport": "0.6.0",
-    "uuid": "^8.3.2".
-    "body-parser": "^1.20.3"
+    "uuid": "^8.3.2"
   }
 }
